--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,65 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:background="@drawable/udea"
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp">
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/editText"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:hint="Ingrese la ubicación"
-            android:gravity="center"/>
-
-        <Button
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Buscar"
-            android:id="@+id/search_button"
-            android:onClick="mapViewButton"/>
+            android:id="@+id/main_etxBloque"
+            android:hint="Bloque"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            android:textColorHint="#FFFFFF"
+            android:inputType="number"/>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/main_etxSalon"
+            android:hint="Salón u oficina"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            android:textColorHint="#FFFFFF"
+            android:inputType="number"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/goMapButton"
+            android:src="@android:drawable/ic_menu_search"
+            android:background="#000000"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="8dp"/>
+
     </LinearLayout>
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView2"
+            android:src="@drawable/busquedavanzada"
+            android:background="#000000"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="15dp"
+            android:layout_weight="1"
+            android:onClick="advancedSearchClick"/>
+    </LinearLayout>
 </LinearLayout>
