--- a/app/src/main/res/menu/menu_udea_map.xml
+++ b/app/src/main/res/menu/menu_udea_map.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="co.edu.udea.pi2.ubicameudea.view.activities.MainActivity">
+    tools:context="co.edu.udea.pi2.ubicameudea.view.activities.UdeaMapActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
