--- a/app/src/main/res/layout/activity_advanced_search.xml
+++ b/app/src/main/res/layout/activity_advanced_search.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/ubicameudea"
     tools:context="co.edu.ubicameudea.view.activities.AdvancedSearchActivity">
 
     <LinearLayout
@@ -88,7 +89,11 @@
                 android:id="@+id/advanced_search_btnVer"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/text_ver_ubicacion"/>
+                android:text="@string/text_ver_ubicacion"
+                android:background="#6c9a06"
+                android:textColor="#ffffffff"
+                android:layout_weight="0.11"
+                android:textStyle="bold"/>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
