--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,23 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/udea"
+    android:background="@drawable/ubicameudea"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:src="@drawable/ubicamelog"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center_horizontal" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="300dp">
+        android:layout_marginTop="70dp">
 
         <EditText
             android:layout_width="wrap_content"
@@ -22,7 +31,8 @@
             android:hint="Bloque"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="8dp"
-            android:textColorHint="#FFFFFF"
+            android:textColorHint="#ff000000"
+            android:textColor="#ff000000"
             android:inputType="number"/>
         <EditText
             android:layout_width="wrap_content"
@@ -31,27 +41,29 @@
             android:hint="Salón u oficina"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="8dp"
-            android:textColorHint="#FFFFFF"
+            android:textColorHint="#ff000000"
+            android:textColor="#ff000000"
             android:inputType="number"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/goMapButton"
             android:src="@android:drawable/ic_menu_search"
-            android:background="#000000"
+            android:background="#6c9a06"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="8dp"/>
 
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:weightSum="1">
 
-        <ImageView
+        <!--<ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageView2"
@@ -60,6 +72,19 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
             android:layout_weight="1"
+            android:onClick="advancedSearchClick"/>-->
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Búsqueda Avanzada"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="15dp"
+            android:id="@+id/btn_advance_search"
+            android:background="#6c9a06"
+            android:textColor="#ffffffff"
+            android:layout_weight="0.11"
+            android:textStyle="bold"
             android:onClick="advancedSearchClick"/>
     </LinearLayout>
 </LinearLayout>
