--- a/app/src/main/res/layout/welcome_activity.xml
+++ b/app/src/main/res/layout/welcome_activity.xml
@@ -3,7 +3,7 @@
     android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/logotipoudea2"
+    android:background="@drawable/fondoubicame"
     android:orientation="vertical" >
 
     <ProgressBar
@@ -22,6 +22,6 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/progressbar"
         android:layout_alignParentLeft="true"
-        android:text="TextView" />
+        android:text="" />
 
 </RelativeLayout>
